# rust_webots_simulation

./: Cargo.toml  README.md  build.rs  build.sh  run.sh
controllers/drone_bbox/: drone_bbox
controllers/drone_thermal/: drone_thermal
controllers/ground_station/: ground_station
src/: lib.rs
worlds/: .fire_detection_rust.wbproj  fire_detection_rust.wbt
