[package]
name = "webots_fire_detection"
version = "0.1.0"
edition = "2021"
description = "Pure Rust Webots controllers for multi-drone wildfire detection"
build = "build.rs"

[dependencies]
# Serialization for bounding box JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Byte order handling (big-endian protocol)
byteorder = "1.5"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# C string handling
libc = "0.2"

[build-dependencies]
# For finding Webots installation
cc = "1.0"

[lib]
name = "fire_detection"
path = "src/lib.rs"

[[bin]]
name = "drone_thermal"
path = "src/bin/drone_thermal.rs"

[[bin]]
name = "drone_bbox"
path = "src/bin/drone_bbox.rs"

[[bin]]
name = "ground_station"
path = "src/bin/ground_station.rs"

[profile.release]
opt-level = 3
lto = true
